corrected navigation section changed from display:inline to display:flex added flex-wrap:wrap in index.css. Corrected logo deleted display:inline and added deleted display:inline and added justify-content: space-around to <a>.

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -70,19 +70,22 @@ h1, h2, h3, h4, h5 {
 /*Navigation section*/
 nav {
 	margin: 0 auto;
+	display: flex;
+	flex-wrap: wrap;
 }
 .top {
-	margin: 0 2%;
-	text-align: center;
+	margin: 3% auto;
 	text-decoration: none;
-	display: inline-block;
+	justify-content: space-around;
+	align-items: center;
 }
 
 img.logo {
-	margin: 0 2.5%;
-	font-size: 30px;
-	display: inline-block;
+	padding: 12px;
+	justify-content: space-around;
+    align-items: center;
 }
+/*End of Navigation section*/
 /*Header section begins*/
 .innovations {
 	text-align: center;
@@ -97,12 +100,8 @@ img.logo {
 	width: 300px;
 	height: 300px;
 }
-/*1st line Break*/
-hr {
-	margin: 35px;
-	width: 80%;
-}
-/*First-Section class begins*/
+/*End of Header section*/
+/*Begins 2nd section*/
 .middle-img {
 	margin: 5%;
 }
@@ -126,22 +125,26 @@ div.about {
  div.services {
 	width: 25%;
 	display: inline-block;
+	margin: 5% 2%;
  }
 
  div.product {
 	width: 25%;
 	display: inline-block;
+	margin: 5% 2%;
  }
 
 div.vision {
 	 width: 25%;
 	 display: inline-block;
+	 margin: 5% 2%;
 }	
 
 .contact {
 	padding:2px;
 	margin: 2px;
-
-
+}
+body {
+	margin: 0 10%;
 }
 
